Added pointcloud visualization by implementing opengl scene. Platformmovement is simulated by a 5 sec sleep.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ SET(SOURCE_FILES
     StereoFrameData.cpp 
     StereoProcessingThread.cpp
     MyQListWidgetItem.cpp
+    DrawableDrawablePointCloud.cpp
 )
 
 SET(HEADER_FILES
